# start-alignment

./: .gitignore  CMakeLists.txt  README.md  alineamiento_estrella.txt  run.sh
data/: frataxin_mamiferos.fasta
include/: align_utils.hpp  fasta_reader.hpp  needleman_wunsch.hpp  score_matrix.hpp  star_alignment.hpp
src/: align_utils.cpp  fasta_reader.cpp  main.cpp  needleman_wunsch.cpp  score_matrix.cpp  star_alignment.cpp
tests/: test_alignment.cpp
